<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 版本操作 -->
    <string name="versionName">1.0.0</string>
    <string name="app_name">IBS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="press_back_exit_app">再按一次回退键退出程序</string>
    <string name="login_app_name">IBS管理系统</string>
    <string name="login_user_hint">点击请输入账号</string>
    <string name="login_password_hint">点击请输入密码</string>
 <!-- 上拉下拉 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <!-- 首页 -->
    <string name="user_role_manager">管理者</string>
    <string name="user_role_employees">普通员工</string>
    <string name="addmaterial">新增素材</string>
    <string name="receivetask">接收的任务</string>
    <string name="material">素材</string>
    <string name="sendtask">发布的任务</string>
    <string name="task">任务</string>
    <!-- 个人中心 -->
    <string name="mymaterial">我的素材</string>
    <string name="unfinishedmaterial">未完成的素材</string>
    <string name="checkedmaterial">已审核的素材</string>
    <string name="uncheckedmaterial">未审核的素材</string>
    <string name="mytask">我的任务</string>
    <!-- 新增任务 -->
    <string name="addtask">新增任务</string>
    <string name="allocation">分配</string>
    <string name="taskname">任务名称:</string>
    <string name="taskname_hint">请输入任务名称</string>
    <string name="allocation_object">分配对象:</string>
    <string name="allocation_object_hint">请选择分配的人员</string>
    <string name="deadline">截止时间:</string>
    <string name="deadline_hint">点击后选择日期</string>
    <string name="tasktype">任务类型:</string>
    <string name="urgenttask">紧急任务</string>
    <string name="normaltask">普通任务</string>
    <string name="description">描述:</string>
    <string name="allocationpositve">确定要分配此任务吗?</string>
    <string name="tasksave">是否保存当前内容?</string>
    <!-- 任务界面 -->
    <string name="receivedtask">接收的任务</string>
    <string name="sendedtask">发布的任务</string>
    <string name="receivedtask_tasknumber">任务单号:</string>
    <string name="receivedtask_taskstatue">完成状态:</string>
    <string name="receivedtask_tasktype">任务类别:</string>
    <string name="taskdetail">任务详情</string>
    <string name="taskfinish">完工</string>
    <string name="committime">提交时间:</string>
    <!-- 选择分配人 -->
    <string name="allocationtask">分配任务</string>
    <string name="yes">确定</string>
    <!-- 素材详情 -->
    <string name="check_pass">通过</string>
    <string name="check_nopass">不通过</string>
    <string name="materialdetail">素材详情</string>
</resources>