<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#bababb"
    >
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="#ffffff"
       >
  <TextView 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/addtask"
      android:textColor="#303030"
      android:textSize="@dimen/text_big"
      android:paddingTop="15dp"
      android:paddingBottom="15dp"
      android:layout_centerInParent="true"
      />
  <Button 
      android:id="@+id/btn_allocation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/allocation"
      android:textColor="#0079fa"
      android:textSize="@dimen/text_medial"
      android:background="#00000000"
      android:padding="10dp"
      android:layout_alignParentRight="true"
      android:layout_centerVertical="true"
      android:layout_marginRight="20dp"
      />   
  </RelativeLayout>  
  <!-- 任务名称 -->
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/task_edt_bg"
      android:layout_margin="5dp"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      >
   <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/taskname"
       android:textColor="#303030"
       android:textSize="@dimen/text_medial"
       android:paddingLeft="10dp"
    
       />   
   <EditText 
       android:id="@+id/edt_taskname"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:hint="@string/taskname_hint"
       android:background="#00000000"
       android:textSize="@dimen/text_medial"
       android:textColor="#bababb"
       android:paddingLeft="10dp"
       />
  </LinearLayout>
  
  <!-- 分配对象 -->
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/task_edt_bg"
      android:layout_margin="5dp"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      >
   <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/allocation_object"
       android:textColor="#303030"
       android:textSize="@dimen/text_medial"
       android:paddingLeft="10dp"
       />   
   <TextView
       android:id="@+id/tv_allocationname"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:hint="@string/allocation_object_hint"
       android:textSize="@dimen/text_medial"
       android:textColor="#bababb"
       android:paddingLeft="10dp"
       />
   <Button 
       android:id="@+id/btn_addperson"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/btn_addperson"
       android:layout_marginLeft="30dp"
       />
  </LinearLayout>
  
  <!-- 截止时间 -->
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/task_edt_bg"
      android:layout_margin="5dp"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      >
   <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/deadline"
       android:textColor="#303030"
       android:textSize="@dimen/text_medial"
       android:paddingLeft="10dp"
    
       />   
   <TextView 
       android:id="@+id/tv_date"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:hint="@string/deadline_hint"
       android:textSize="@dimen/text_medial"
       android:textColor="#bababb"
       android:paddingLeft="10dp"
       />
          
   <TextView 
       android:id="@+id/tv_datecount"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:hint="3天"
       android:textSize="@dimen/text_medial"
       android:textColor="#bababb"
       android:paddingLeft="10dp"
       />
   <Button 
       android:id="@+id/btn_adddate"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/btn_calend"
       android:layout_marginLeft="30dp"
       />
  </LinearLayout>
  <!-- 任务类型 -->
  <LinearLayout 
       android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      >
    <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/tasktype"
       android:textColor="#303030"
       android:textSize="@dimen/text_medial"
       android:paddingLeft="10dp"
     /> 
     <RadioGroup 
         android:id="@+id/radio_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
      <RadioButton 
          android:id="@+id/rbtn_urgent"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/urgenttask"
          android:textColor="#303030"
          android:textSize="@dimen/text_medial"
          android:button="@null"
          android:drawableLeft="@drawable/radiobutton_selector"
          /> 
          <RadioButton 
          android:id="@+id/rbtn_normal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/normaltask"
          android:textColor="#303030"
          android:textSize="@dimen/text_medial"
          android:button="@null"
         android:drawableLeft="@drawable/radiobutton_selector"
          />  
     </RadioGroup> 
  </LinearLayout>
  <!-- 描述 -->
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/task_detail_bg"
      android:layout_margin="5dp"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:orientation="vertical"
      >
    <TextView 
        android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/description"
       android:textColor="#303030"
       android:textSize="@dimen/text_medial"
       android:paddingLeft="10dp"
        /> 
    <EditText 
       android:id="@+id/edt_taskdetail"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="@dimen/text_medial"
       android:textColor="#bababb"
       android:background="@drawable/task_detail_edt_bg"
       android:paddingLeft="10dp"
       android:layout_marginLeft="50dp"
       /> 
  </LinearLayout>
  <Button 
       android:id="@+id/btn_tasksave"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@drawable/btn_save"
       android:layout_marginLeft="5dp"
       android:layout_marginRight="5dp"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="10dp"
       android:layout_gravity="center_horizontal"
      />
  </LinearLayout>
  </ScrollView>
</LinearLayout>
