<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/taskitem_bg"
    android:paddingLeft="10dp"
    android:layout_marginTop="10dp"
    
    >
 <TextView 
     android:id="@+id/tv_receivedtask_title"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textSize="@dimen/text_medial"
     android:textColor="#303030"
     android:singleLine="true"
     android:paddingTop="5dp"
     android:text="搜索IBS任务发布" 
     />   
<TextView 
     android:id="@+id/txt_tasknumber"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="14sp"
     android:textColor="#B9B9BA"
     android:singleLine="true"
     android:layout_marginTop="10dp"
     android:text="@string/receivedtask_tasknumber" 
     android:layout_below="@id/tv_receivedtask_title"
     />  
     <TextView 
     android:id="@+id/tv_tasknumber"
     android:layout_width="130dp"
     android:layout_height="wrap_content"
     android:textSize="14sp"
     android:textColor="#B9B9BA"
     android:singleLine="true"
     android:layout_marginTop="10dp"
     android:text="1111111111111111" 
     android:layout_below="@id/tv_receivedtask_title"
     android:layout_toRightOf="@id/txt_tasknumber"
     /> 
     <TextView 
     android:id="@+id/txt_taskstatue"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="14sp"
     android:textColor="#B9B9BA"
     android:singleLine="true"
     android:layout_marginTop="10dp"
     android:text="@string/receivedtask_taskstatue" 
     android:layout_below="@id/tv_receivedtask_title"
     android:layout_toRightOf="@id/tv_tasknumber"
     android:layout_marginLeft="15dp"
     />  
      <TextView 
     android:id="@+id/tv_taskstatue"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="14sp"
     android:textColor="#B9B9BA"
     android:singleLine="true"
     android:layout_marginTop="10dp"
     android:text="已完成" 
     android:layout_below="@id/tv_receivedtask_title"
     android:layout_toRightOf="@id/txt_taskstatue"
     android:gravity="left|center_vertical"
     />  
     <TextView 
     android:id="@+id/txt_deadline"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="14sp"
     android:textColor="#B9B9BA"
     android:singleLine="true"
     android:layout_marginTop="5dp"
     android:paddingBottom="5dp"
     android:text="@string/deadline" 
     android:layout_below="@id/txt_tasknumber"
     />  
     <TextView 
     android:id="@+id/tv_deadline"
     android:layout_width="130dp"
     android:layout_height="wrap_content"
     android:textSize="14sp"
     android:textColor="#B9B9BA"
     android:singleLine="true"
     android:layout_marginTop="5dp"
     android:paddingBottom="5dp"
     android:text="2014-4-30 10:30" 
     android:layout_below="@id/txt_tasknumber"
     android:layout_toRightOf="@id/txt_deadline"
     />  
     <TextView 
     android:id="@+id/txt_tasktype"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="14sp"
     android:textColor="#B9B9BA"
     android:singleLine="true"
     android:layout_marginTop="5dp"
     android:paddingBottom="5dp"
     android:text="@string/receivedtask_tasktype" 
     android:layout_below="@id/txt_taskstatue"
     android:layout_toRightOf="@id/tv_deadline"
     android:layout_marginLeft="15dp"
     />
       <TextView 
     android:id="@+id/tv_tasktype"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="14sp"
     android:textColor="#B9B9BA"
     android:singleLine="true"
     android:layout_marginTop="5dp"
     android:paddingBottom="5dp"
     android:text="紧急" 
     android:layout_below="@id/tv_taskstatue"
     android:layout_toRightOf="@id/txt_tasktype"
     android:gravity="left|center_vertical"
     />
</RelativeLayout>
