<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

      <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" 
        
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:focusable="true"   
            android:focusableInTouchMode="true"
            >


            <TextView
                android:id="@+id/taskdetail_title"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#B9B9BA" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >
                <TextView
                    android:id="@+id/tv_taskdetail_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="搜索IBS任务发布素材"
                    android:textColor="#303030"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_taskdetail_detail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="5dp"
                    android:text="搜索IBS任务发布素材法法师发根深蒂固饰发大水打法是否打法是否发顺丰到付范德萨发的打发"
                    android:textColor="#303030"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/taskdetail_title"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#B9B9BA" />
                <!-- 任务单号 -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/receivedtask_tasknumber"
                        android:textColor="#9c9ea0"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_taskdetail_tasknumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:text="11126055"
                        android:textColor="#9c9ea0"
                        android:textSize="15sp" />
                </LinearLayout>
                <!-- 截止日期 -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deadline"
                        android:textColor="#9c9ea0"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_taskdetail_deadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:text="2014-4-30"
                        android:textColor="#9c9ea0"
                        android:textSize="15sp" />
                </LinearLayout>
                <!-- 任务类别 -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tasktype"
                        android:textColor="#9c9ea0"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_taskdetail_tasktype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:text="紧急任务"
                        android:textColor="#9c9ea0"
                        android:textSize="15sp" />
                </LinearLayout>

                <!-- 分配对象 -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allocation_object"
                        android:textColor="#9c9ea0"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_taskdetail_taskobj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:text="策划小组"
                        android:textColor="#9c9ea0"
                        android:textSize="15sp" />
                </LinearLayout>

                <!-- 完成状态 -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/receivedtask_taskstatue"
                        android:textColor="#9c9ea0"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_taskdetail_taskstatue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:singleLine="true"
                        android:text="已完成"
                        android:textColor="#9c9ea0"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/line_bg" >

                <TextView
                    android:id="@+id/txt_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/material"
                    android:textColor="#303030"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_materialcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/txt_material"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="(20)"
                    android:textColor="#303030"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/imgbtn_addmaterial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/add" />
            </RelativeLayout>

            <com.victop.ibs.view.MyListView

                android:id="@+id/taskdetail_materiallist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:cacheColorHint="#00000000"
                android:divider="@drawable/line"
                android:dividerHeight="1dp"
                android:listSelector="#00000000" />
        </LinearLayout>
   </ScrollView>

</LinearLayout>